--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,20 +39,19 @@ jobs:
           cd $ANDROID_SDK_ROOT/cmdline-tools/latest
           wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
           unzip -q commandlinetools-linux-8512546_latest.zip
-          # Перемещаем содержимое распакованной директории (обычно "cmdline-tools") вверх
+          # Перемещаем содержимое распакованной папки (обычно "cmdline-tools") вверх
           mv cmdline-tools/* .
           rm -rf cmdline-tools
           rm commandlinetools-linux-8512546_latest.zip
 
-          # Создаём каталог tools/bin и копируем sdkmanager туда,
-          # чтобы он оказался по пути: <sdk>/tools/bin/sdkmanager
-          mkdir -p $ANDROID_SDK_ROOT/tools/bin
-          cp $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager $ANDROID_SDK_ROOT/tools/bin/
+          # Удаляем старую директорию tools и создаём символическую ссылку
+          rm -rf $ANDROID_SDK_ROOT/tools
+          ln -s $ANDROID_SDK_ROOT/cmdline-tools/latest $ANDROID_SDK_ROOT/tools
 
           # Обновляем PATH для доступа к sdkmanager и другим утилитам
           export PATH=$ANDROID_SDK_ROOT/tools/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
 
-          # Принимаем лицензии и устанавливаем необходимые компоненты, явно указывая --sdk_root
+          # Принимаем лицензии и устанавливаем необходимые компоненты с указанием --sdk_root
           yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses || true
           sdkmanager --sdk_root=$ANDROID_SDK_ROOT --install "platform-tools" "platforms;android-29" "build-tools;29.0.3" "ndk;21.4.7075529"
 
