--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -23,18 +29,14 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y ffmpeg libz-dev libffi-dev libssl-dev 
           python -m pip install --upgrade pip
-          pip install buildozer cython python-for-android
+          pip install buildozer cython
 
       - name: Set up Android SDK and NDK
         run: |
-          export JAVA_HOME=/usr/lib/jvm/temurin-8-jdk-amd64
+          export JAVA_HOME=/usr/lib/jvm/temurin-17-jdk-amd64
           export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
           mkdir -p $ANDROID_SDK_ROOT
-          
-          # Устанавливаем commandline-tools
           mkdir -p $ANDROID_SDK_ROOT/cmdline-tools/latest
           cd $ANDROID_SDK_ROOT/cmdline-tools/latest
           wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
@@ -42,26 +44,22 @@ jobs:
           mv cmdline-tools/* .
           rm -rf cmdline-tools
           rm commandlinetools-linux-11076708_latest.zip
-          
-          # Настраиваем PATH
-          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
-          
-          # Принимаем лицензии и устанавливаем SDK/NDK
+          ln -sfn $ANDROID_SDK_ROOT/cmdline-tools/latest $ANDROID_SDK_ROOT/tools
+          export PATH=$ANDROID_SDK_ROOT/tools/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
           yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses || true
-          sdkmanager --sdk_root=$ANDROID_SDK_ROOT --install "platform-tools" "platforms;android-31" "build-tools;31.0.0" "ndk;23.1.7779620"
-          
-          # Удаляем старые версии NDK
-          rm -rf $HOME/.buildozer/android/platform/android-ndk-r25b
+          sdkmanager --sdk_root=$ANDROID_SDK_ROOT --install "platform-tools" "platforms;android-33" "build-tools;33.0.2" "ndk;25.2.9519653"
 
       - name: Build APK
         env:
+          JAVA_HOME: /usr/lib/jvm/temurin-17-jdk-amd64
           ANDROID_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
-          ANDROID_NDK_HOME: $HOME/.buildozer/android/platform/android-sdk/ndk/23.1.7779620
-          ANDROID_NDK: $HOME/.buildozer/android/platform/android-sdk/ndk/23.1.7779620
+          ANDROID_NDK_HOME: $HOME/.buildozer/android/platform/android-sdk/ndk/25.2.9519653
         run: |
-          export JAVA_HOME=/usr/lib/jvm/temurin-8-jdk-amd64
-          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
-          buildozer android debug
+          export JAVA_HOME=/usr/lib/jvm/temurin-17-jdk-amd64
+          export ANDROID_NDK=$ANDROID_NDK_HOME
+          unset ANDROIDNDK
+          mkdir -p $HOME/.buildozer/android/platform/python-for-android
+          buildozer -v android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
