--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install buildozer cython virtualenv
 
+      - name: ✅ Принятие лицензий Android SDK
+        run: |
+          yes | ${ANDROID_HOME}/cmdline-tools/latest/bin/sdkmanager --licenses
+
       - name: 📲 Сборка APK с помощью Buildozer
         run: |
           buildozer android debug
