--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,14 @@ jobs:
         python3 -m pip install --upgrade pip
         pip install buildozer
 
+    - name: 🔧 Сборка Docker образа вручную
+      run: |
+        git clone https://github.com/kivy/buildozer.git buildozer-docker
+        docker build -t my-buildozer buildozer-docker/docker
+
     - name: ⚙️ Сборка APK через Docker
       run: |
-        docker run --rm -v ${{ github.workspace }}:/app kivy/buildozer buildozer android debug
+        docker run --rm -v ${{ github.workspace }}:/app my-buildozer buildozer android debug
 
     - name: 📦 Загрузка APK в артефакты
       uses: actions/upload-artifact@v4
